fix: Fix icon alignment on contact page. Add default link style.

--- a/src/components/footer.sass
+++ b/src/components/footer.sass
@@ -6,6 +6,8 @@
     .navbar-item
         // color: $grey-light
         padding: 0.25rem 0.75rem
+        &:hover
+            color: $turquoise
 
 .is-flex
     flex-wrap: wrap
